[gd_scene load_steps=5 format=2]

[ext_resource path="res://entities/characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/characters/npcs/scripts/moving_npc.gd" type="Script" id=2]
[ext_resource path="res://assets/GFX/PNG/Soldier 1/soldier1_stand.png" type="Texture" id=3]
[ext_resource path="res://entities/flashlight/Flashlight.tscn" type="PackedScene" id=4]

[node name="Guard" groups=[
"npcs",
] instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
fov_tolerance = 20.0
detection_distance = 640.0
walk_speed = 100.0
min_arrival_distance = 5

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="Flashlight" parent="." index="1" instance=ExtResource( 4 )]
position = Vector2( 13.3304, 15.3576 )

[node name="LightOccluder2D" parent="." index="2"]
position = Vector2( 1.65274, 0 )

[node name="WaitTimer" type="Timer" parent="." index="4"]
wait_time = 3.0
one_shot = true

[node name="NewPathDelay" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
[connection signal="timeout" from="NewPathDelay" to="." method="_on_NewPathDelay_timeout"]
